src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Contact&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>Contact_Person_ID__c</columns>
        <columns>DK_SAP_ERP__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Account_Involved_Party_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Contact_Person</value>
        </filters>
        <label>All Contact Persons</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Contacts_Including_Actimizer</fullName>
        <columns>Contact_Person_ID__c</columns>
        <columns>DK_SAP_ERP__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>actimizerdialer__CallAttempts__c</columns>
        <columns>actimizerdialer__NoInterest__c</columns>
        <columns>actimizerdialer__NoInterestDate__c</columns>
        <columns>actimizerdialer__Notes__c</columns>
        <columns>actimizerdialer__LockedBy__c</columns>
        <columns>actimizerdialer__DialTime__c</columns>
        <columns>actimizerdialer__RedialPhone__c</columns>
        <columns>actimizerdialer__ActimizerCallback__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts Including Actimizer</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_PostNord_Employees</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Org_ID__c</columns>
        <columns>ANSTNR__c</columns>
        <columns>User_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.PostNord_Employee</value>
        </filters>
        <label>All PostNord Employees</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Private_Persons</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>All Private Persons</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Functional_Email_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Is_Org_Unit_Contact__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Org_Unit_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Functional Email Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Contact_Person</fullName>
        <active>true</active>
        <label>Contact Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>PostNord_Employee</fullName>
        <active>true</active>
        <label>PostNord Employee</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_First_Name_Mandatory</fullName>
        <active>true</active>
        <description>Give error message if contact saved with no first name</description>
        <errorConditionFormula>ISBLANK( FirstName ) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>You must enter a First Name to be able to save a contact person</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Person_Account_Record_Type_Check</fullName>
        <active>true</active>
        <description>If contact is created with record type of Contact Person then account record type must be Work Site</description>
        <errorConditionFormula>Account.RecordType.Name != &apos;Work Site&apos; &amp;&amp;  RecordType.Name = &apos;Contact Person&apos; &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Contact persons can only be associated with Work Sites</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Person_Type_is_mandatory</fullName>
        <active>false</active>
        <description>Contact Person Type is mandatory - validation rule to catch API insert/update</description>
        <errorConditionFormula>ISBLANK (TEXT(Contact_Person_Type__c)) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Contact_Person_Type__c</errorDisplayField>
        <errorMessage>Contact person Type is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Nr_Length_Check</fullName>
        <active>true</active>
        <description>Fax Number can&apos;t be more than 30 characters.</description>
        <errorConditionFormula>LEN( Fax ) &gt; 30</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Fax Number can&apos;t be more than 30 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Language_is_mandatory</fullName>
        <active>false</active>
        <description>Language is mandatory - validation rule to catch API insert/update</description>
        <errorConditionFormula>ISBLANK (TEXT(Language__c)) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Language__c</errorDisplayField>
        <errorMessage>Language is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LastName_Length_Check</fullName>
        <active>true</active>
        <description>Last Name can&apos;t be more than 70 characters.</description>
        <errorConditionFormula>LEN( LastName ) &gt; 40</errorConditionFormula>
        <errorDisplayField>LastName</errorDisplayField>
        <errorMessage>Last Name can&apos;t be more than 40 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Phone_Nr_Length_Check</fullName>
        <active>true</active>
        <description>Mobile Phone Number can&apos;t be more than 30 characters.</description>
        <errorConditionFormula>LEN( MobilePhone ) &gt; 30</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile Phone Number can&apos;t be more than 30 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Permission_on_Valid_Email_Address</fullName>
        <active>true</active>
        <description>To ensure that it is not possible to select any value in Permission Channel Field unless there is an valid e-mail address.</description>
        <errorConditionFormula>AND($Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false, ISBLANK(Email),
NOT(ISBLANK(TEXT(Permission_Channel__c)))
)</errorConditionFormula>
        <errorMessage>Permission cannot be given unless there is a valid e-mail address in the field E-mail</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Nr_Length_Check</fullName>
        <active>true</active>
        <description>Phone Number can&apos;t be more than 30 characters.</description>
        <errorConditionFormula>LEN( Phone ) &gt; 30</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone Number can&apos;t be more than 30 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PostNord_Emp_Account_Record_Type_Check</fullName>
        <active>true</active>
        <description>If contact is created with record type of PostNord Employee then account record type must be PostNord Org Structure</description>
        <errorConditionFormula>Account.RecordType.Name != &apos;PostNord Org Structure&apos; &amp;&amp;  RecordType.Name = &apos;PostNord Employee&apos; &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>PostNord Employees can only be associated with the PostNord Org Structure</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verified_is_mandatory</fullName>
        <active>false</active>
        <description>Verified is mandatory - validation rule to catch API insert/update</description>
        <errorConditionFormula>ISBLANK (TEXT(Verified__c)) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Verified__c</errorDisplayField>
        <errorMessage>Verified is mandatory</errorMessage>
    </validationRules>
</CustomObject>